[package]
name = "thar-be-updates"
version = "0.1.0"
authors = ["Erikson Tung <etung@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
log = "0.4.8"
simplelog = "0.8.0"
snafu = "0.6.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_plain = "0.3.0"
fs2 = "0.4.3"
semver = { version = "0.9", features = ["serde"] }
signpost = { path = "../../updater/signpost" }
apiclient = { path = "../apiclient" }
bottlerocket-release = { path = "../../bottlerocket-release" }
http = "0.2.1"
nix = "0.17.0"
chrono = { version = "0.4.11", features = ["serde"] }
update_metadata = { path = "../../updater/update_metadata"}
models = { path = "../../models"}

[build-dependencies]
cargo-readme = "3.1"
